--- a/messenger-frontend/package.json
+++ b/messenger-frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.1.0",
+    "electron-is-dev": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "react": "^18.1.0",
@@ -17,8 +18,7 @@
     "reactjs-popup": "^2.0.5",
     "spinners-react": "^1.0.7",
     "wait-on": "^6.0.1",
-    "web-vitals": "^2.1.4",
-    "electron-is-dev": "^2.0.0"
+    "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
   "scripts": {
